<resources>
    <string name="app_name">YoutubeMusicUiClone</string>
    <string name="disconnected">Connected</string>
    <string name="search">Search</string>
    <string name="music">Music</string>
    <string name="energize">Energize</string>
    <string name="relax">Relax</string>
    <string name="focus">Focus</string>
    <string name="commute">Commute</string>
    <string name="workout">Workout</string>
    <string name="mixed_for_you">Mixed for you</string>
    <string name="more">More</string>
    <string name="name">name</string>
    <string name="category">category</string>
    <string name="account">Hilal Kurnaz</string>
    <string name="listen_again">Listen again</string>
    <string name="late_night_beats">Late night beats</string>
</resources>