<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".home.HomeFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appLogo"
            android:layout_width="@dimen/space_25"
            android:layout_height="@dimen/space_25"
            android:layout_gravity="start"
            android:layout_margin="@dimen/space_4"
            android:src="@drawable/app_icon_music" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/music"
            android:textColor="@color/white"
            android:textSize="@dimen/size_24"
            app:fontFamily="@font/oswald_medium" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profile"
            android:layout_width="@dimen/space_25"
            android:layout_height="@dimen/space_25"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/space_8"
            android:layout_marginEnd="@dimen/space_16"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_image"
            app:shapeAppearanceOverlay="@style/oval_image_view" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="@dimen/space_8"
            android:background="@drawable/search_icon" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/disconnected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="@dimen/space_8"
            android:background="@drawable/connected_icon" />
    </androidx.appcompat.widget.Toolbar>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:singleLine="true">

            <com.google.android.material.chip.Chip
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_16"
                android:text="@string/energize"
                android:textColor="@color/white"
                android:textSize="@dimen/size_18"
                app:chipCornerRadius="@dimen/space_8"
                app:chipSurfaceColor="@color/chip_background" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relax"
                android:textColor="@color/white"
                android:textSize="@dimen/size_18"
                app:chipCornerRadius="@dimen/space_8"
                app:chipSurfaceColor="@color/chip_background" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/focus"
                android:textColor="@color/white"
                android:textSize="@dimen/size_18"
                app:chipCornerRadius="@dimen/space_8"
                app:chipSurfaceColor="@color/chip_background" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commute"
                android:textColor="@color/white"
                android:textSize="@dimen/size_18"
                app:chipCornerRadius="@dimen/space_8"
                app:chipSurfaceColor="@color/chip_background" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_16"
                android:text="@string/workout"
                android:textColor="@color/white"
                android:textSize="@dimen/size_18"
                app:chipCornerRadius="@dimen/space_8"
                app:chipSurfaceColor="@color/chip_background" />

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_8"
        android:layout_marginTop="@dimen/space_25"
        android:text="@string/mixed_for_you"
        android:textColor="@color/white"
        android:textSize="@dimen/size_30"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="@dimen/space_50"
        android:layout_height="@dimen/space_25"
        android:layout_margin="@dimen/space_25"
        android:background="@drawable/chip_background"
        android:text="@string/more"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"
        tools:listitem="@layout/adapter_music_item" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileBig"
        android:layout_width="@dimen/space_50"
        android:layout_height="@dimen/space_50"
        android:layout_gravity="end"
        android:layout_marginStart="@dimen/space_16"
        android:layout_marginTop="@dimen/space_25"
        android:scaleType="centerCrop"
        android:src="@drawable/profile_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
        app:shapeAppearanceOverlay="@style/oval_image_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_12"
        android:layout_marginTop="@dimen/space_25"
        android:text="@string/account"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/profileBig"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_12"
        android:layout_marginTop="@dimen/space_4"
        android:text="@string/listen_again"
        android:textColor="@color/white"
        android:textSize="@dimen/size_24"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/profileBig"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewListAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3"
        tools:listitem="@layout/adapter_list_again_item" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_16"
        android:text="@string/late_night_beats"
        android:textColor="@color/white"
        android:textSize="@dimen/size_30"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewListAgain" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text"
        tools:listitem="@layout/adapter_music_item" />


</androidx.constraintlayout.widget.ConstraintLayout>